--- a/src/styles/components/scrollingText.scss
+++ b/src/styles/components/scrollingText.scss
@@ -33,6 +33,7 @@
 @media (max-width: 768px) {
   #services {
     .scrolling-container {
+      display: none;
       .scrolling-text {
         p {
           font-size: 9rem;
