--- a/src/styles/components/testimonials.scss
+++ b/src/styles/components/testimonials.scss
@@ -132,13 +132,21 @@
       }
 
       .testimonials-content {
-        grid-template-columns: 1fr;
-        gap: 1.5rem;
+        display: flex;
+        overflow-x: auto;
+        scroll-snap-type: x mandatory;
+        -webkit-overflow-scrolling: touch;
+        gap: 1rem;
+        position: relative;
 
         .testimonial-item {
+          max-width: 100%;
+          flex-shrink: 0;
+          scroll-snap-align: center;
           align-items: flex-start;
           text-align: left;
           padding: 0;
+          box-sizing: border-box;
 
           .testimonial-image {
             width: 80px;
@@ -161,6 +169,28 @@
             .author-title {
               font-size: 0.8rem;
             }
+          }
+        }
+
+        .arrows {
+          display: flex; // Ensure it's visible
+          justify-content: space-between;
+          position: absolute;
+          top: 50%;
+          left: 0;
+          right: 0;
+          transform: translateY(-50%);
+          pointer-events: none; // Only arrows should be clickable
+
+          .arrow {
+            pointer-events: auto;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: #fff;
+            border: none;
+            padding: 1rem;
+            cursor: pointer;
+            font-size: 1.5rem;
+            z-index: 100; // Ensure arrows are on top of other elements
           }
         }
       }
