--- a/src/styles/components/welcomeTyped.scss
+++ b/src/styles/components/welcomeTyped.scss
@@ -1,4 +1,4 @@
-.custom-cursor {
+.typed-cursor {
   writing-mode: vertical-rl;
   text-orientation: mixed;
   font-size: 10rem;
@@ -6,8 +6,11 @@
   line-height: 0.5;
   display: flex;
   align-items: flex-end;
+  max-width: 70%;
+  margin: auto;
 
   @media (max-width: 768px) {
+    font-size: 4.5rem !important;
     grid-column: 1 / -1;
     writing-mode: horizontal-tb;
     text-orientation: initial;
